[package]
name = "nxo-parser"
version = "0.1.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binread = "1.4.1"
modular-bitfield = "0.11.2"
lz4 = "1.23.2"
